--- a/styles/form-style.css
+++ b/styles/form-style.css
@@ -48,7 +48,6 @@ body {
 }
 
 #div5{
-    background-color: lightblue;
     width: 100%;
     height: 70px;
     margin-bottom: 60px;
@@ -62,7 +61,6 @@ body {
     }
 
 #div6{
-    background-color: lawngreen;
     width: 100%;
     height: 300px;
     display: flex;
@@ -72,7 +70,6 @@ body {
 }
 
 #div7{
-    background-color: lightcoral;
     width: 80%;
     height: 100%;
     display: flex;
@@ -102,6 +99,7 @@ body {
         	outline:none;
             padding:0;
             border-radius: 8px;
+            background-color: #509560;
         }
 
         #button{
