--- a/styles/form-style.css
+++ b/styles/form-style.css
@@ -117,3 +117,17 @@ body {
             background-color: #7e9b85;
         }
 
+
+@media (max-width: 600px) {
+    #div1{
+        width: 100%;
+        height: 100%;
+    }
+    
+    #div2{
+        width: 100%;
+        height: 100%;
+        margin-top: 50px;
+        
+    }
+}
